[project]
name = "langgraph-gallery-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.50.0",
    "grandalf>=0.8",
    "langchain>=1.0.8",
    "langchain-azure-ai>=1.0.0",
    "langgraph>=1.0.3",
    "mermaid-python>=0.1",
    "python-dotenv>=1.2.1",
]

[tool.uv]
package = true

[project.scripts]
doc_gen = "graph_gallery.doc_generator.doc_gen_app:main"
